# deesl

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  PROJECT_PLAN.md  README.md  TODOS.md  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  justfile  tarpaulin.toml
.cargo/: config.toml
.github/workflows/: ci.yml  coverage.yml  docker-publish.yml
frontend/: Cargo.toml  index.html  package-lock.json  vite.config.js
frontend/src/: App.vue  auth.rs  fuel_entries.rs  lib.rs  router.js  vehicles.rs
frontend/src/components/: AddFuelEntryForm.vue  AddVehicleForm.vue  AppFooter.vue  Dashboard.vue  FuelEntryItem.vue  FuelEntrySection.vue  ImportFuelEntries.vue  Login.vue  QuickAddFuelForm.vue  Register.vue  UserSettings.vue  VehicleItem.vue  VehiclesPage.vue
frontend/src/composables/: useAuth.js  useCurrency.js
frontend/src/services/: api.js  fuelEntries.js  import.js  vehicleShares.js  vehicles.js  version.js
frontend/static/: index.html
migrations/2025-03-15-162951_create_vehicles/: down.sql  up.sql
migrations/2026-02-21-161058-0000_create_users/: up.sql
migrations/2026-02-21-161104-0000_create_fuel_stations/: down.sql  up.sql
migrations/2026-02-21-161104-0001_create_fuel_entries/: down.sql  up.sql
migrations/2026-02-21-161104-0002_create_vehicle_shares/: down.sql  up.sql
migrations/2026-02-21-161113-0000_add_owner_to_vehicles/: down.sql  up.sql
migrations/2026-02-21-164307-0000_alter_fuel_entries_to_double/: down.sql  up.sql
migrations/2026-02-22-153840-0000_add_currency_to_users/: up.sql
migrations/2026-02-22-155107-0000_google_oauth_users/: down.sql  up.sql
migrations/2026-02-25-232604-0000_add_user_id_to_fuel_stations/: down.sql  up.sql
migrations/2026-02-28-000000_add_fuel_entries_unique/: down.sql  up.sql
migrations/2026-03-04-201656-0000_create_temp_imports/: down.sql  up.sql
migrations/2026-03-08-191242-0000_add_unit_preferences_to_users/: down.sql  up.sql
migrations/2026-04-03-000000_add_fuel_entries_filled_at_index/: down.sql  up.sql
migrations/2026-04-03-000000_add_vehicles_registration_unique/: down.sql  up.sql
src/: api_doc.rs  auth.rs  auth_handlers.rs  config.rs  db.rs  error.rs  handlers.rs  import_handlers.rs  lib.rs  main.rs  models.rs  oauth_handlers.rs  schema.rs  state.rs  user.rs  user_handlers.rs  vehicle_fuel_handlers.rs  vehicle_share_handlers.rs
src/handlers/: auth.rs  fuel_entries.rs  import.rs  misc.rs  mod.rs  settings.rs  stations.rs  stats.rs  vehicles.rs
src/pkg/: index.html
templates/: add_fuel_entry.html  add_vehicle.html  dashboard.html  edit_fuel_entry.html  fuel_entries.html  import.html  index.html  layout.html  login.html  settings.html  stations.html  stats.html  vehicles.html
templates/fragments/: import_mapping.html  import_result.html  recent_entries.html  settings_success.html  station_search_results.html  vehicle_card.html  vehicle_list.html
tests/: integration_tests.rs
tests/common/: mod.rs
tests/data/: test_fuel_log.csv
