[package]
name = "deesl"
version = "0.3.6"
edition = "2024"

[lib]
name = "deesl"
path = "src/lib.rs"

[[bin]]
name = "deesl"
path = "src/main.rs"

[dependencies]
askama = "0.12.1"
axum = { version = "0.8.1", features = ["json", "tokio", "form", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
chrono = { version = "0.4.40", features = ["serde"] }
csv = "1.3"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.8", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
headers = "0.4"
http = "1"
jsonwebtoken = "9.3"
rstest = "0.25.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.14"
http-security-headers = { version = "0.1", features = ["middleware"] }
tower-cookies = "0.11"
tower-http = { version = "0.6.2", features = ["trace", "fs", "cors"] }
tower-livereload = "0.9.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = "4.0"
validator = "0.20.0"
oauth2 = "4"
reqwest = { version = "0.13.2", features = ["json"] }
urlencoding = "2.1.3"
tower = "0.5"

[dev-dependencies]
